# cargo_env.bzl

./: .bazelignore  .gitattributes  .gitignore  .pre-commit-config.yaml  BUILD.bazel  LICENSE  MODULE.bazel  README.md  cargo_env.bzl
.bcr/: metadata.template.json  presubmit.yml
.devcontainer/: devcontainer.json  post_create.sh
.github/workflows/: ci.yaml  publish.yaml  release.yaml  release_prep.sh  tag.yaml
cargo_env/: BUILD.bazel  cargo_env.bzl  env_wrapper.sh  template.env
examples/: .bazelrc  .envrc  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md
examples/src/: lib.rs  main.rs
examples/tools/: BUILD.bazel
tools/: BUILD.bazel
