module(name = "cargo_env.bzl")

# keep-sorted start
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "package_metadata", version = "0.0.7")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_lib", version = "3.1.0")
bazel_dep(name = "rules_cc", version = "0.2.16")
# keep-sorted end

# keep-sorted start
bazel_dep(name = "gazelle", version = "0.47.0", dev_dependency = True)
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.9.0", dev_dependency = True)
bazel_dep(name = "bazelrc-preset.bzl", version = "1.8.0", dev_dependency = True)
# keep-sorted end
