load("@aspect_gazelle_prebuilt//:def.bzl", "aspect_gazelle")
load("@bazelrc-preset.bzl", "bazelrc_preset")

bazelrc_preset(
    name = "preset",
    doc_link_template = "https://registry.build/flag/bazel?filter={flag}",
)

aspect_gazelle(
    name = "gazelle",
    command = "fix",
    languages = ["starlark"],
    visibility = ["//visibility:public"],
    with_check = True,
)
